# developer.skatelescope.org

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CODEOWNERS  CODE_OF_CONDUCT  LICENSE  Makefile  Pipfile  README  README.md  namespace  pyproject.toml  requirements.txt
docs/: Makefile
docs/src/: conf.py  index.rst
howto/: helm-linting.rst
scripts/: doc_type_formatter.py
src/: conf.py  index-bk.rst  index.rst
src/_templates/: algolia-search.html  breadcrumbs.html  custom-footer.html  custom-search.html  footer.html  layout.html
src/about/: followus-env.rst  index.rst  safe-for-ska.rst  ska-org.rst  teams-responsibilities.rst
src/agile_practices/: definition_of_done.rst
src/attic/: index.rst
src/community/: decision_making.rst  getting_started.rst  recommended_readings.rst  share_your_knowledge.rst  teams_responsibilities.rst
src/contributor/: contribute.rst
src/dependencies/: base.rst  base_dev_env.rst  developer.skatelescope.org.rst  listing_project_dependencies.rst  ska-skeleton.rst
src/development/: AppCMake.txt  codeguide.rst  containerisation-standards.rst  cplusplus-codeguide.rst  cpp_source_tree.txt  definition_of_done.rst  docker-proxy-cache.rst  example-ci.yml  fundamental_sw_requirements.rst  getting_started.rst  gitlab-variables.rst  javascript-codeguide.rst  k8s-verification-steps.rst  kubernetes-introduction.rst  logging-format.rst  multitenancy.rst  need_to_know.rst  orchestration-guidelines.rst  python-codeguide.rst  python_package_release_procedure.rst  software_package_release_procedure.rst  source_tree.txt  uploading-docker-nexus.rst  vhdl-guidelines.rst
src/development_practices/: definition_of_done.rst  incident_management.rst  ska_testing_policy_and_strategy.rst
src/explanation/: branch.rst  branching-policy.rst  central-artefact-repository.rst  commit-code.rst  containerization.rst  continuous-integration.rst  feature-flags-explanation.rst  linting.rst  merge-request-quality.rst  merge-request.rst  oci-registries.rst  oci-supply-chain.rst  optimize-oci-image-builder.rst  policy-agent.rst  ska-testing-policy-and-strategy.rst  software-supply-chain.rst  stfc-kubernetes-clusters.rst  vault-structure.rst
src/follow_us/: followus_env.rst
src/getting-started/: contrib-guidelines.rst  deploy-skampi.rst  devenv-setup.rst  getting-started.rst  index.rst  integrate-skampi.rst  mvp.rst  onboarding.rst  projects.rst
src/getting_started/: contrib_guidelines.rst  devenv_setup.rst  getting_started.rst  projects.rst
src/howto/: ansible-linting.rst  code-review.rst  configure_git.rst  configure_gitlab.rst  continuous-integration.rst  create_branch.rst  create_merge_request.rst  deploy-to-datacentres.rst  (+17 more)
(+242 files in other folders)
