[tool.poetry]
name = "developer-skatelescope-org"
version = "0.1.0"
description = "SKAO Developer Portal"
authors = ["Ugur Yilmaz <ugur.yilmaz@skao.int>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "developer"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.docs.dependencies]
docutils = "^0.18.1"
imagesize = "^1.4.1"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
pygments = "^2.15.1"
sphinx = "^6.2.1"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.2"
sphinx-gitstamp = "^0.3.3"
sphinx-notfound-page = "^0.8.3"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-websupport = "^1.2.4"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
