[tool.poetry]
name = "developer-skatelescope-org"
version = "0.1.0"
description = "SKAO Developer Portal"
authors = ["Ugur Yilmaz <ugur.yilmaz@skao.int>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "developer"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
docutils = "0.20"
imagesize = "^1.4.1"
jinja2 = "^3.1.4"
markupsafe = "^2.1.5"
pygments = "^2.18.0"
sphinx = "~7.2.0"
sphinx-autobuild = "^2024.4.16"
sphinx-copybutton = "^0.5.2"
sphinx-gitstamp = "^0.4.0"
sphinx-notfound-page = "^1.0.2"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-websupport = "^1.2.7"
recommonmark = "^0.7.1"
sphinx-docsearch = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
