[tool.poetry]
name = "developer-skatelescope-org"
version = "0.1.0"
description = "SKAO Developer Portal"
authors = ["Ugur Yilmaz <ugur.yilmaz@skao.int>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "developer"}]
package-mode = false

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
docutils = "0.20"
imagesize = "^1.4.1"
jinja2 = "^3.1.4"
markupsafe = "^2.1.5"
pygments = "^2.18.0"
recommonmark = "^0.7.1"
ska-ser-sphinx-theme = "^0.2.1"
sphinx = "<8.2"
sphinx-autobuild = "^2024.4.16"
sphinx-copybutton = "^0.5.2"
sphinx-gitstamp = "^0.4.0"
sphinx-notfound-page = "^1.0.2"
sphinxcontrib-mermaid = "^0.9.2"
sphinxcontrib-websupport = "^1.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
